--- a/uvod.html
+++ b/uvod.html
@@ -177,94 +177,134 @@ var m = new SMap(JAK.gel("m"), center, 17, SMap.DEF_OPHOTO);
 <span style="color:#b9cb99;">
 <p>
 
-Prečo je znečisťovanie jazier tak sledovaná a citlivá tema pre Bratislavu?
-Kúpať sa a porušovať zákon, alebo nekúpať sa?
-<br><br>
-(mimochodom ak nechcete porušovať zákon musíte sa kúpať len na malom jazere alebo ísť peši len po turistických cestách okolo veľkého jazera,
-alebo byť rybár s pvolením)
+
+Prvý krát prídete na jazerá, je to ako by ste ojavili raj v meste, poviete si aké krásne prírodné jazerá, 
+niektorím prejde myslov "aký nevyužitý potenciál Bratislavy".
+Jazerá budia dojem nikým nedotknutej, neprebánanej krajiny, bez civilizácie, oázy pokoja, o ktorú sa nik nestará a tak je ponechaná na pospas prírody.
+Iba stará asfaltová cesta tiahnuca sa popri jazerách, kazí tento dojem nikým nedotknutej krajiny.
+<br>
+A vy ani len netúšíte, že tieto perly na okraji Bratislavy nie sú vôbec nedotknuté a majú za sebou búrlivú históriu. 
+<br>
+Prečo bolo(stále je?) znečisťovanie jazier tak citlivá a sledovaná tema pre Bratislavu?
+<br>
 <br><br>
 Ťažba štrku v oblasti Čunovských jazier sa datuje do šesdesiatych a postupný vznik jazier do sedemdesiasiatych rokov.
-V tomto období sa začína o novovznikntých jazerách uvažovať ako o rekreačnom potenciále pre rozrastajúcu sa Bratislavu
-a najmä pre obyvateľov vznikajúcej Petržalky. Nové rozrastajúce sa mesto však potrebovalo nielen rekreačné oblasti, ale najmä
+V tomto období sa začína o novovznikntých jazerách uvažovať aj ako o rekreačnom potenciále pre rozrastajúcu sa Bratislavu
+a to najmä pre obyvateľov vznikajúcej Petržalky. Nové rozrastajúce sa mesto však potrebovalo nielen rekreačné oblasti, ale hlavne
 pitnú vodu, ktorej (aj vďaka znečisťovaniu a eko haváriám) malo nedostatok. Častokrát ju mesto muselo pre obyvatelov dopravovať v cisternách. 
-A tak sa v tejto oblasti priebežne robili aj prieskmy. Zistilo sa, že je tu veľa kvalitnej podzemnej vody a
-severne od jazier sa vybudoval výdatý vodný zdroj Ostrovné lúčky. 
-Pre mesto, ktoré trpelo nedostatkom pitnej vody to bol veľký zázrak.
-Musel sa však chrániť a tak inštitúcie nariadili ochránné pásma ktoré siahali až k čunovským a rusovským jazerám. Bola obava,
-že znečisťovanie týchto jazier môže znečistiť aj podzemnú vodu, ktorá v tom čase prúdila smerom k vodnému zdroju.
-A tu nastal obrovský problém. Akýsi konflikt, ktorý pretrváva až do dnes. 
+A tak sa v prírodných oblastiach priebežne robili prieskmy a hladal sa nový zdroj pitnej vody. Takéto prieskumy sa robili
+aj severne od čunovských jazier v oblasti Ostrovných lúčok,kde sa zistilo veľa kvalitnej podzemnej vody. A tak inštitúcie rozhodli:
+začne sa tu budovať nový výdatný vodný zdroj pitnej vody pre Bratislavu. 
 <br><br>
-Rastúce obyvateľstvo Bratislavy potrebovalo okrem pitnej vody aj relax v prírode a v letných horúčavách najmä oddych pri vode. 
-Dunaj bol znečistený, kúpaliská preplnené a štrkoviská so svojou samočistiacou schopnosťou boli najlepšia možnosť kúpania sa. 
-Obyvateľstvo tak začalo postupne objavovať aj odľahlé Čunovské jazerá a ich okolitú prírodu. 
-A tak ľudí a odpadkov na jazerách pribúdalo a socialistické inštitúcie sa začali obávať znečistenia vodného zdroja. 
-Nastal konflikt, socialistická polícia vyháňala ľudí z jazier a tí sa sem vždy vracali a brali to ako obmedzovanie ich slobody.
-Boj medzi inštitúciami omedzjúcimi ľuďom v ich práve na relax po práci, v ich slobodách vs ochrana vôd. Veľa kúpajúcich pochyovalo
-o tom, že ich pobyt na jazere by mohol znečistiť vodný zdroj.  
+Pre mesto, ktoré trpelo nedostatkom pitnej vody to bol veľký zázrak.
+Tento novovzniknutý zdroj sa však musel chrániť a tak inštitúcie nariadili ochránné pásma, ktoré siahali až k čunovským a rusovským jazerám. 
+Vznikla obava, že znečisťovanie týchto jazier môže znečistiť aj podzemnú vodu, 
+ktorá v tom čase prúdila od Dunaja cez jazerá smerom k vodnému zdroju.
+A tu nastal obrovský problém. Akýsi konflikt, ktorý pretrváva na jazerách až do dnes. 
+Plány uspokojiť rekreačné túžby obyvateľov versus ochrana vôd a prírody.  
+<br><br>
+Rastúce obyvateľstvo Bratislavy potrebovalo samozrejme okrem pitnej vody aj relax v prírode a v letných horúčavách najmä oddych pri vode. 
+Bratislava ponúkala riečne pláže, kúpaliská ale aj niekoľko štrkovísk. Pre ľudí ktorí chceli mať pri oddychu súkromie boli
+najlepšia voľba práve novovzniknté Štrkoviská. Okrem dostatku súkromia ponúkali aj priezračnú vodu so samočistiacou schopnosťou. 
+A tak ľudia začali postupne objavovať aj odľahlé vtedy málo známe Čunovské jazerá a ich okolitú prírodu. 
+Táto odľahlosť lákala samozrejme aj nudistov. Jediný problém bol, že sa tu nenachádzal žiaden bufet a tak si sem ľudia museli svoj konzuum nosiť. 
+Nenachádzali sa tu ani sociálne zariadenia, upratovacia služba a ani odpadkové koše. Nikto nekontroloval vstup a tak si sem
+niektorí obyvatelia prichádzali umývať a opravovať aj svoje motorové vozidlá. 
+S pribúdajúcimi dovolenkármi, začal pribúdať samozrejme aj odpad a znečistenie. 
+A tak inštitúcie(vtedy socialistické) sa začali obávať znečistenia novovznikajúceho vodného zdroja.
+Začala sa ochrana širokej oblasti vodného zdroja Ostrovné lúčky a snaha zamedziť prístup na jazerá kúpania sa chtivým obyvateľom.
+Vtedajšiemu JRD Dunaj - vlastníkovi - bolo dokonca nariadenné aby tu vyudoval ochranný plot.
+<br><br>
+Nastal konflikt, polícia (vtedy ešte VB) vyháňala ľudí z jazier ale niektorí sa sem vždy vracali a brali to ako obmedzovanie ich slobody,
+ich práva na oddych pri vode, protest proti vtedajšiemu režimu. 
+Boj medzi inštitúciami snažiacimi sa chrániť vodu a ľuďmi dožadujcimi sa svojich práv oddychu po práci.
+Svoju úlohu tu zohrala aj nedôvera v socialistické inštitúcie a pochybnosti, že by zopár kúpajúcich dovolenkárom mohlo nejako znečistiť vodný zdroj.  
 <br><br>
 Ako čas plynul, začal sa črtať ďalší prolém. Vlastne bolo ich niekoľko. 
-Prvý bol ten že príroda sa ako tak zotavila z ťažkých mechanizmov a ťažby štrku a zistilo sa dokonca, 
-že lesy ale najmä lúky v oblasti skrývajú poklady v podobe vzácnej flóry a fauny.  
-Druhý bol ten, že ekonomika Slovenska na svoj rozvoj potrebovala elektrickú energiu a tú malo zabezpečiť vodné dielo na Dunaji.
-Výstavba tohoto diela sa poriadne zahryzla do okolitých lužných lesov. Aj jazerá zasiahli ťažké mechanizmy, 
-keď sa tu budovala asfaltová cesta, ktorú potrebovali pre výstavbu vodného diela. 
-Stavebný odpad a panely z jej výstavby, ktoré už nepotreovali jednoducho nahádzali do jazera a sú tam dodnes. Tento odpad sa pridal k
-stavebnému odpadu, ktorý tam bol ešte z čias ťažby štrku.
 <br><br>
-Až po napustení vodného diela (VD Gačíkovo)sa zničená oblasť začala ako tak obnovovať.
-Tok podzemnej vody sa postupne zmenil a jazerá už neovplyvňovali vodný zdroj. Strach zo znečistenia dôležitého vodného zdroja
+Prvý bol ten že keď sa príroda ako tak zotavila z ťažkých mechanizmov a ťažby štrku zistilo sa, 
+že lesy ale najmä lúky v oblasti skrývajú poklady v podobe vzácnej flóry a fauny.  
+<br><br>
+Druhý prolém bol ten, že ekonomika Slovenska na svoj rozvoj potrebovala elektrickú energiu a tú malo zabezpečiť vodné dielo na Dunaji.
+Výstavba tohoto diela sa poriadne zahryzla do okolitých lužných lesov. Pri Dunaji vznikalo jedno obrovské stavenisko.
+Aj jazerá zasiahli ťažké mechanizmy vodného diela, našťastie len okrajovo. 
+Budovala sa tu asfaltová cesta, ktorú potrebovali pre výstavbu vodného diela. 
+Stavebný odpad a panely z jej výstavby, ktoré už nepotreovali však skončili pohádzané v jazere a môžete ich tam vidieť dodnes. 
+Tento odpad sa pridal k stavebnému odpadu, ktorý tam bol možno ešte z čias ťažby štrku.
+<br><br>
+Až po napustení vodného diela (VD Gačíkovo)sa čiastočne zničená oblasť jazier začala znovu obnovovať.
+<br><br>
+Najdôležitejšie bolo ale to že napustením VD sa tok podzemnej vody otočil a prúdil opačne. 
+Takto voda jazier už neovplyvňovala vodný zdroj. Strach zo znečistenia dôležitého vodného zdroja
 pomynul, ale na povrch vyplával nový, vlastne to bol ten dávny už spomínaný.
-Obrovská návštevnosť v letných mesiacoch spôsobovla ničenie a znečisťovaním chránenej prírody - vznikajúceho biotopu. 
-Chvílkové povolenie kúpania na veľkom jazere a možnosť parkovania motorovými prostriedkami malo za následok masívne znečisťovanie jazier,
+<br><br>
+Obrovská návštevnosť v letných mesiacoch spôsobovla ničenie a znečisťovanie chránenej prírody. 
+Chvílkové povolenie kúpania sa na veľkom jazere a možnosť parkovania motorovými prostriedkami malo za následok masívne znečisťovanie jazier,
 vytváranie skládok a ničenie vzácnych rastlín na okolitých lúkach. Pád socializmu a rast ekonomiky - sloboda a nárast konzumu, 
 plastových obalov a pohŕdanie zákonom - prírodou mal za následok to, že sa z jazier stalo smetisko. 
-Akási skládka odpadu, ktorú jedna menšina tvorila, iná tolerovala a ďalšia s ňou bojovala. Čnovské jazerá vyzerali ako jedna veľká skládka odpadu, ktorú sa snažili
-niektorí zodpovední občania, rybári a samospráva minimalizovali. Boj pomocou pokút, zamedzovaniu vstupu, polície, brán, plotov a
-rámp. Dobrovoľnícke združenia, rybári a samospráva sa snažili aspoň minimalizovať odpad na jazerách každoročnými briádami avšak nič nepomohlo. 
-Znečisťovanie Čunovských jazier - častá téma v periodikách. Nekonečný boj a odpadu bolo toľko, že sa nedal úplne celý vyzbierať. 
-Veľa odpadu navyše bolo aj vo vode,v zemi, v ťažko dostuupných kríkoch a brehoch.
+Akási skládka odpadu, ktorú jedna menšina tvorila, iná tolerovala a ďalšia s ňou bojovala. 
 <br><br>
-Postupom času však ľudí čo zbierajú odpadky začalo pribúdať a odpadu z jazier ubúdať. Dnes patria Čunovské jazerá nielen medzi tie najkrajšie
-ale hlavne medzi tie najčistejšie.  
-
+Čunovské jazerá vyzerali ako jedna veľká skládka odpadu, ktorú sa snažili
+niektorí zodpovední občania, rybári a samospráva minimalizovali. Boj pomocou polície, pokút, zamedzovania vstupu, brán, plotov a
+rámp. Dobrovoľnícke združenia, rybári a samospráva sa snažili aspoň minimalizovať tvoriaci sa odpad na jazerách každoročnými brigádami,
+ avšak nič nepomáhalo. Znečisťovanie Čunovských jazier bola častá téma v periodikách, hlavne v letnej sezóne. 
+Vyzeralo to na nekonečný boj so znečisťovaním a odpadu bolo toľko, že sa nedal ani úplne celý vyzbierať. 
+Veľa odpadu navyše bolo vo vode, v zemi, v ťažko dostuupných kríkoch a brehoch.
 <br><br>
-Keď som pred niekoľkými rokmi začal zbierať odpadky na čunovských jazerách, nevedel som kde začať. 
-Z mojej strany to bolo niečo ako úcta a poďakovanie jazerám že tu môžem tráviť voľný čas. A zároveň
+Keď som pred niekoľkými rokmi začal zbierať odpadky na čunovských jazerách, boli všade a nevedel som kde skôr začať. 
+Z mojej strany to bolo niečo ako úcta a poďakovanie sa jazerám, že tu môžem tráviť voľný čas. A zároveň
 som sa hanbil za ľudí, ktorí to tu znečisťujú a ničia. Začal som odstraňovaním stavieb, akési spevnenia
-brehov, ktoré boli odporné a plné kadejakého odpadu. Povedal som si, že vždy keď navštívim jazerá
-niečo vyzbieram a hlavne s nedostupných kríkov a brehov. A tak postupne jazero vyčistím.
-Na začiatku sa mi do toho vôbec nechcelo, veď komu sa dobrovoľne chce zbierať odpadky?
-Ale postupne ma to začalo baviť a tak som v tom pokračoval. Občas niečo pozbierala aj
-priateľka, ktorá ale nikdy nechcela aby som ju uviedol na socialnych sieťach, tak to robím dodatočne.
-Počas zberu odpadkov som sa stretol s kadečím a kadekým. 
-Videl som ako si nudista vešia mikroténové sáčky na zrezané stromy vo vode ako keby vytváral umenie, samozrejme ich tam nechal.
-Videl som ako rybár hádže plné vedrá krmiva do vody prakom. Ako si rybári donesú toľko potrieb a tašiek že
-na ne mali samotný samorozkladací stan aby im nezmokli. Upozorňoval som pána aby si neumýval špinavý bicykel v jazere.
-Niekoľko krát som upozornil ľuďí aby si nezakladali oheň. Upozorňoval som deti aby kosákom neničili vegetáciu.
-Keď som išiel so smeťami častokrát som videl a počul ako sa ľudia vysmievajú. Jeden na mňa chcel aj zavolať políciu
-keď si myslel že pálim smeti, zatiaľ čo ja som ich len fotil. Videl som však aj ľudí čo zbierajú odpadky a to mi dávalo nádej.
+brehov, ktoré nielen že vyzerali strašne ale boli plné kadejakého odpadu. 
+<br><br>
+Povedal som si, že vždy keď navštívim jazerá, niečo vyzbieram a hlavne z nedostupných kríkov a brehov. A tak postupne jazero vyčistím.
+Na začiatku sa mi do toho vôbec nechcelo. Ale postupne ma to začalo baviť a tak som v tom pokračoval. Občas niečo pozbierala aj
+priateľka, ktorá ale nikdy nechcela aby som ju uviedol na socialnych sieťach(tak to robím dodatočne)
+Počas zberu odpadkov som sa stretol s kadečím a kadekým.
+<br><br>
+ 
+<br>Videl som napr. ako si nudista vešia mikroténové sáčky na zrezané stromy vo vode, asi si myslel že tvorí umelecké dielo, samozrejme svoje dielo tam nechal.
+<br>Videl som ako rybár prakom vrhá plné vedrá krmiva do vody. 
+<br>Ako si rybári doniesli toľko vecí a tašiek k vode, že všetok ten komfort mali vložený v samostatom samorozkladacom stane. 
+<br>Upozorňoval som pána aby si neumýval špinavý bicykel vo veľkom jazere.
+<br>Niekoľko krát som upozornil ľuďí aby si tu nezakladali oheň. 
+<br>Upozorňoval som teenegerov aby kosákom neničili vegetáciu a kroviny pri jazere.
+<br>Keď som išiel so zabalenými smeťami častokrát som videl a počul ako sa mi ľudia za chrbtom vysmievajú. 
+<br>Dokonca jeden na mňa chcel aj zavolať políciu,keď si myslel že pálim smeti, zatiaľ čo ja som ich len fotil. 
+<br>Raz sa mi stalo, že keď som povyeral z krovia odpadky-boli tam aj také pokazené digitálky-položím ich pri karimatku a idem zbierať
+ďalšie odpadky na vzdialenejšie miesto. Keď som sa vracal, vidím ako nejaký dedko uteká preč z miesta pri karimatke. 
+Prídem tam a vidím všetky tie špinavé odpadky nahádzané na karimatke. Dedko si asi myslel, že som tam vyhodil odpadky a tak sa mi pomstil.
+<br>Dôležité je ale že som videl ľudí čo tiež zbierajú odpadky a to mi dávalo nádej, že jazerá raz budú čisté.
 <br><br>
 
-Keď som začal zierať smeti ol som v domnení že väčinou zbieram po dovolenkároch.
-Vedel som že veľa odpadkov produkujú kúpajúci sa a najmä výrastkovia. No postupom času
-som zistil, že takmer neustále zbieram odpadky po rybároch. Prekvapilo ma to a bol to pre mňa veľký šok.
-Dovtedy som si myslel, že sú to ľudia, ktorí maju radi prírodu.
+Keď som začal zbierať smeti bol som v domnení že väčinou zbieram odpad po dovolenkároch. Tak sa to všade prezentovalo.
+Vedel som že veľa odpadkov produkujú kúpajúci sa a najmä teenegeri. No postupom času si všimol že na jazerách je veľa
+rybárskeho materiálu a že zbieram veľa odpadu aj po rybároch. Prekvapilo ma to a bol to pre mňa veľký šok.
+Dovtedy som si myslel, že sú to ľudia, ktorí maju radi prírodu. Bolo to aj tým, že sa v novinách prezentovali brigádami
+na jazerách a akí su oni čistotní a zbierajú odpadky po kúpajúcich sa. Dnes(rok 2025) sa mi zdá, že sa takto začínajú 
+prezentovať niektorí nudisti, ktorých začína z jazier vytláčať samospráva - vraj keď oni tam nebudú, jazerá ostanú špinavé.
 
 <br><br>
-Raz som sa rozhodol, že príspevky a fotky odpadkov čo vyzbieram dám na socialne siete nech ľudia vidia aký tam je odpad a kto znečisťuje jazero.
-Najprv som si povedal že dám to tam a uvidí sa a nečakal som vôbec že to niekoho zaujme.
+Raz som sa rozhodol, že príspevky a fotky odpadkov čo vyzbieram dám na socialne siete, nech ľudia vidia aký tam je odpad a kto znečisťuje jazero.
+Najprv som si povedal: "že zverejním odpadky a uvidí sa". Vôbec som nečakal, že to zbieranie odpadkov vôbec niekoho zaujme.
 Ale ľudí to celkom zaujalo a tak som pokračoval, ale už s cielom poukázať na znečisťovanie jazier a 
-inšpirovať ďalších ľudí k ich čisteniu. Išiel som príkladom a spolu s ďalšími dobrovoľníkmi ktorí sa postupne pridávali 
-(aj keď som ich osobne nevidel) sa nám podarilo urobiť z týchto krásnych jazier jedny z najčistejšich jazier v Bratislave.
-Najmä rok 2023 a 2024 boli prelomové v tomto.
-
+inšpirovať ďalších ľudí k ich čisteniu. Bol to dobrý nápad lebo to pomohlo priťiahnuť na jazerá ďalších dobrovoľníkov.
+<br><br>
+Nakoniec sa nám všetkým ľuďom ktorým na jazerách záleží podarilo urobiť z týchto krásnych jazier jedny z najčistejšich jazier v Bratislave.
+Dokázali sme to aj bez finančnej podpory alebo podpory inštitúcií, ktoré to už dávno vzdali a nikdy nepomohli.
+V čistení jazier boli prelomové najmä roky 2023 a 2024. 
+<br><br>
+Otázky a odpovede:
+<br><br>
+Je znečisťovanie jazier iba novodobý fenomén?
+<br><br>
 Ľuďom čo si myslia že odpadky sa predtým na jazerách nevyskytovali chcem odkázať aby si prečítali staré novinové články
 nájdu ich aj na téjto stránke v menu UVEREJNILI.
 Áno odpadky trápia jazerá už od ich vzniku, takže to nie je novodobý fenomén ako by si niekto myslel.
 Dôkazom toho sú retro odpadky, ktoré som neustále nachádzal. Napr Indulona ešte z čias ČSSR.
 Dokonca je v pôde zahrabaný aj stavebný odpad pravdepodobne ešte z čias keď sa na jazerách ťažil štrk a stavala panelovo-asfaltová cesta.
 Nejaký ten odpad urobili aj návštevníci jazier, ktorí si tam začali upravovať a spevňovať brehy ešte kedysi dávno.
-
+<br><br>
+Znečisťujú jazerá iba "cezpolní" a rybári bez povolenia?
 <br><br>
 Názor, že jazerá špinili iba ľudia, ktorí nebývajú v okolí je mylný. Alebo že to robia iba prisťahovalci.
 V každej skupine ľudí sa vždy nájde určité percento znečisťovateľov, či už to sú domáci alebo prišelci, rybári alebo kúpajúci, 
@@ -279,6 +319,21 @@ Jeden obviňoval druhého, ale odpadky zbierala iba hŕstka ľudí.
 Postupne ako z jazier začalo ubúdať odpadkov, sa táto diskusia upokoljila a dnes(rok 2025) sa vytratila.
 <br>
 Či to tak ostane aj naďalej závisí iba na ľuďoch, ktorí navštevujú tieto nádherné jazerá a skutočne im na nich záleží. 
+</p>
+
+<br><br>
+Kúpať sa na veľkom jazere a porušovať zákon, alebo nekúpať sa a chodiť len po vyznačených trasách? 
+<br><br>
+
+Na túto otázku si každý musí zodpovedať sám.
+Vyzerá to že momentálne je kúpanie sa na veľkom jazere akoby zodpovednými inštitúciami tolerované. Aj napriek veľkej
+návštevnosti jazerá nevyzerajú ako smetisko, lúky sú posiate chránenými rastlinami, autá parkujú ďaleko a tak štátna ochrana
+prírody toleruje kúpanie sa na jazerách. 
+<br>
+pozn. pri vstupe na veľké jazero so 4. stupňom ochrany ak nechcete porušovať zákon musíte ísť peši len po turistických cestách, mimo
+nich je pohybovať sa zakázané,aj psíka nsmiete mať voľne pusteného, vínimku majú napr. rybári s pvolením ktorí sa tam môžu pohybovať voľne a tak okrem
+chytania rýb si môžu aj zaplávať. Ostatní sa môžu kúpať len na malom jazere.
+<br><br>
 	
 </p>
 
