--- a/2024.html
+++ b/2024.html
@@ -328,7 +328,7 @@ som našiel mikroténový sáčok, pri vode repelent spray s obsahom, polystyré
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
 Ak sa kedysi stávalo, že polícia pokutovala a vyháňala ľudí z jazier, dnes už je kúpanie sa na malom jazere 
 povolené a na veľkom jazere tolerované, nikto už nikoho nevyháňa.
-Ale už len ak na veľkom jazere zídete z turistickej cestičky - porušujete zákon a nemusíte sa kúpať v jazere. Je tam zákaz pohyovať sa mimo takýchto chodníkov.
+Ale už len ak na veľkom jazere zídete z turistickej cestičky - porušujete zákon a nemusíte sa kúpať v jazere. Je tam zákaz pohyovať sa mimo vyhradených chodníkov.
 Ak váš pes nie je na vôcke a behá si mimo turistických chodníkov - porušujete zákon. Ak trháte pri jazere šípky alebo hríby - porušujete zákon.
 Teraz však je na veľkom jazere sloboda, štátna ochrana prírody nemá dostatok ľudí a ani prostriedky na kontrolu zákona a pred porušovaním zákona zatvára oči. 
 Na jazere je akási sloboda a za to že tam nie je smetisko vďačíme iba dobrovoľníkom. 
@@ -376,6 +376,196 @@ Samozrejme špaky. Zapaľovač niekto nechal v padnutom strome. Ďalšie odpadky
 </table>
 
 
+
+<br><br>
+
+
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 07.01.2025 publikované na facebooku 08.01.2025</span></u></b></span></p>	
+	
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+
+
+
+Vpredu Čunovské jazerá vyzerajú čisto ale vzadu je to už horšie. V hustom poraste odpadky nevidno, ale zima ukázala ako sa niektoré 🐷 činili. Tak som zas trochu priložil ruku k dielu. 😊
+<br><br>
+Predvčerom v pondelok sme boli s priateľkou pozrieť jazerá. Mali sme viac času a tak sme obehli okolo celého veľkého jazera a pozrel som si miesta, kde som už dávnejšie nebol. Boli sme zhrození, koľko odpadkov sme videli na miestach v zadu na jazere.
+<br><br>
+Dve miesta boli neskutočne zahádzané odpadkami.<br>
+1. miesto je tam kde sa v sezóne zdržiava mládež.<br>
+2. miesto je pri skrytých nudistických plážach pri lavičke a menšej mokradi s padnutými stromami.<br>
+<br><br>
+Včera sme to boli vyzbierať. Chceli sme tak urobiť doobeda, kým nebude pršať, avšak dážď sa spustil skôr a tak
+sme počas zberu trošku aj zmokli. Našťastie sme sa obliekli do dažďa.
+<br><br>
+1. Začali sme zbierať (alebo skôr predierať sa) na miestach kde sa často zdržiava mládež. Mladí sa tam ukrývajú a robia si párty.
+Nechávajú tam všetok ten bordel, plechovky, fľaše z alkoholu a limonád, obaly najmä z čipsov, mikrotén atď.
+Niektoré obaly sa už rozpadávali. Našiel som tam aj zabalené plastové poháre, príbor, dušu z bicykla. Všetko pohádzané v ťažko dostupných a pichľavých kríkoch.
+Skládka odpadu teenagerov. Blízko sú aj rybárske miesta, kde som už tradične ponachádzal rybársky odpad: špaky, alkoholové fľaše, silón, rybársku sieť,
+alobal, konzervy z kukurice a dokonca aj takmer celý toaletný papier...
+<br><br>
+Vrátili sme sa kúsok naspäť a zo stromu pri cestičke dali dole aj plastovú stuhu.
+Potom sme pozberali odpadky pri cestičke a niečo podočahovali zo šikmých brehov. Pri vode sme našli napr. obaly a zapaľovač, plechovky atď.
+
+<br><br>
+2. Zbierali sme ďalej smerom k veľkej trávnatej pláži. Za naplaveným drevom v rohu jazera sú mini pláže, kde trávia čas hlavne nudisti a kúsok odtiaľ pri lavičke
+rybári. Je tam aj menšia mokraď s popadanými stromami. Mokraď bola celá úplne zahádzaná odpadkami. Odpad poskrývaný kade tade - no neskutočné ako
+niektorí ľudia dokážu zašpiniť takéto pekné miesto. Bolo tam staré ohnisko s alobalom, konzervami a spáleným plastom.
+Našli sme tam aj plastový vešiak, použité tampóny, uterák, vrecko zo stanu, nebezpečné črepiny, rybársky silón a krmítko, ďalšie konzervy, vedierko plné kameňov, sklo fľaše, sprchový gél/šampón, žiarovku, syntetické servítky, zhnitú kukricu v sáčku a veľa ďalšieho odpadu...
+Pokračovali sme cez hlavnú pláž až k asfaltke. Na pláži je neskutočne veľa špakov po rybároch a dovolenkároch + kadejaký drobný odpad pozdĺž pláže a hlavne v kríkoch.
+Pozbieral som tam aj gumový popruh a zo stromu dočahoval priviaty papierový lampión.
+<br><br>
+Na viac už sme nemali energiu. Celé som to pofotil, pomačkal a natlačil do jedného obrovského ťažkého vreca.
+<br><br>
+V kríkoch som našiel vyhodené pletivo už predtým používané proti bobriemu ohryzu.
+Obalili sme ním bobrom načatý topoľ v tej mokradi, kde sme predtým zbierali odpadky.
+<br><br>
+Nejaké ohorky a plasty z hlavnej pláže sme pozbierali, ale je tam toho ešte dosť na zber.
+
+</p>
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image022.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image022.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image023.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image023.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image024.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image024.jpg"></a></p>
+  </td>
+
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image025.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image025.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image026.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image026.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image027.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image027.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image028.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image028.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image029.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image029.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image030.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image030.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image031.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image031.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image032.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image032.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image033.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image033.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image034.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image034.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image035.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image035.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image036.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image036.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image037.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image037.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image038.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image038.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image039.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image039.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image040.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image040.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image041.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image041.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image042.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image042.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image043.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image043.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image044.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image044.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+	
 
 
 	
