--- a/2024.html
+++ b/2024.html
@@ -519,7 +519,10 @@ Nejaké ohorky a plasty z hlavnej pláže sme pozbierali, ale je tam toho ešte 
   </td>
   <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image038.jpg" target="_blank">
-    <img height=200 id="Obrázok 27" src="2024/image038.jpg"></a></p>
+    <img height=200 id="Obrázok 27" src="2024/image038.jpg"></a>
+   <br>
+normálne sme si z diaľky mysleli že to je<br>kondóm na strome, ale bola to len servítka
+  </p>
   </td>
   <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image039.jpg" target="_blank">
@@ -538,7 +541,11 @@ Nejaké ohorky a plasty z hlavnej pláže sme pozbierali, ale je tam toho ešte 
  <tr>
   <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image041.jpg" target="_blank">
-    <img height=200 id="Obrázok 27" src="2024/image041.jpg"></a></p>
+    <img height=200 id="Obrázok 27" src="2024/image041.jpg"></a>
+	  <br>
+  	posledný pozberaný<br> odpadok, pri malom<br> jazere
+
+  </p>
   </td>
   <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image042.jpg" target="_blank">
