--- a/2024.html
+++ b/2024.html
@@ -563,6 +563,36 @@ normálne sme si z diaľky mysleli že to je<br>kondóm na strome, ale bola to l
  </tr>
 </table>
 
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 18.01.2025</span></u></b></span></p>	
+	
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+
+Dnes dozber odpadkov najmä z mokrade. Neviem prečo majú ľudia tendenciu robiť odpadkové koše z mokradí. Zbieral som dpadky čo sme minule prehliadli. 
+Pod lístím a drevom v kroví sú odpadky takmer neviditeľné. Ešte k tomu ich tam niekto poskrýval. Ťažko sa to tam
+zbiera takže tam nejaké určite ešte ostali. Bobor tam zoťal a načal zopár stromov. Hlavne rybári a nudisti to tam riadne zahádzali, ak
+by sa to tam nevyzbieralo, časom by tam vznikla určite skládka. 
+
+</p>
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image045.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image045.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image046.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image046.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image047.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image047.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+<br>
 
 
 
